Fixed collapsing side-by-side div container

--- a/static/css/users/root.css
+++ b/static/css/users/root.css
@@ -25,6 +25,7 @@ body {
 }
 
 .main-content {
+    width: 80%;
     height: 100%;
 	flex-grow: 1;
 	padding: 30px;
